# works-sprig-deprecated

./: .gitignore  LICENSE  README.md  Vagrantfile
client/: .gitignore  elm.json  index.html
client/css/: style.css
client/elm-stuff/0.19.1/: Config.elmi  Config.elmo  EventListener.elmi  EventListener.elmo  Main.elmi  Main.elmo  Scroll.elmi  Scroll.elmo  Styles.elmi  Styles.elmo
client/src/: Config.elm  Main.elm  Styles.elm  style.css
drafts/: log.txt  omu.txt  placeholder.txt
server/: .gitignore  omu.txt  pgconf.yaml  server.cabal  stack.yaml
server/.stack-work/ghci/04a91faf/: cabal_macros.h
server/.stack-work/ghci/0c38eafe/: cabal_macros.h
server/.stack-work/ghci/10aa57e3/: cabal_macros.h
server/.stack-work/ghci/1b6151f1/: cabal_macros.h
server/.stack-work/ghci/1d66f0bf/: cabal_macros.h
server/.stack-work/ghci/280a867d/: cabal_macros.h
server/.stack-work/ghci/46f1e34c/: cabal_macros.h
server/.stack-work/ghci/6a4fcbd4/: cabal_macros.h
server/.stack-work/ghci/88478b32/: cabal_macros.h
server/.stack-work/ghci/95a87236/: cabal_macros.h
server/.stack-work/ghci/96ac0ae4/: cabal_macros.h
server/.stack-work/ghci/9d3a51c7/: cabal_macros.h
server/.stack-work/ghci/a96ea3c2/: cabal_macros.h
server/.stack-work/ghci/a9984fcf/: cabal_macros.h
server/.stack-work/ghci/b069b436/: cabal_macros.h
server/.stack-work/ghci/b77c68b6/: cabal_macros.h
server/.stack-work/ghci/c4ec6827/: cabal_macros.h
server/.stack-work/ghci/d80043f6/: cabal_macros.h
server/.stack-work/ghci/dca9033e/: cabal_macros.h
server/.stack-work/ghci/e2d6c21d/: cabal_macros.h
server/.stack-work/ghci/f855207c/: cabal_macros.h
server/.stack-work/install/99a5c7ce/flag-cache/: Cabal-2.4.1.0-5wU9DqteDAsDDyPxf2Vnp9  HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  Only-0.1-4eYnxvcrr7tEbYgCvIkHLb  QuickCheck-2.13.2-ELw76TsVduo6OXHYodvTIH  StateVar-1.2-OvQScUJdslB4HgRfOXUfu  Unique-0.4.7.6-5agCY3H0Epd2eLkt4Eh0Bs  adjunctions-4.4-EBa5eIC9ifEHdSFaS9e5QG  aeson-compat-0.3.9-6Uih0Dk0E1f25Gq1nqhT5o  aeson-qq-0.8.3-99FO640XSPj48xNe2liNwA  ansi-terminal-0.9.1-EijnN9bjMEeFpQ4Q0MVTyN  ansi-wl-pprint-0.6.9-BhK04VT0UPD8q34jedbt8T  appar-0.1.8-GEXCW6eRsA87u3FkbnD06R  asn1-encoding-0.9.6-1E7iVclyfA6GPksDO6p77p  asn1-parse-0.9.5-7SjTIpHzOIz8pned02p29X  asn1-types-0.3.3-LkfyxQkRFXdFTxG6Ojy4x0  attoparsec-iso8601-1.0.1.0-BbTOyNiQfNFGeWPr3UOilt  auto-update-0.1.6-GREUn4tHyDS5APDj50DglT  base-unicode-symbols-0.2.3-KhKSDK96fD5DALaTt8Do2K  base64-bytestring-1.0.0.2-9zRsxWrEm5zGbLjNlDas  basement-0.0.11-90nKOI22AdrL6mcnuQkhYo  bifunctors-5.5.6-8RRDwPDjVs3Ay8t2UdtoOZ  blaze-builder-0.4.1.0-KrFxFv3kgua3BTNMsMBadC  blaze-html-0.9.1.2-J20JWCD2FKk8MCNGBN7MhE  blaze-markup-0.8.2.3-ATcS0IRQcDMCxhB8vW9N1d  bsb-http-chunked-0.0.0.4-BCfmq0ia0s9IVjcrN1kyBv  byteorder-1.0.4-IVStE0plZAH4UpHo5zwztw  bytestring-builder-0.10.8.2.0-JZ1IVWVo4k62ItV0IvxitS  cabal-doctest-1.0.8-BgM5394FehAC1r9xUsJz8l  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  cereal-0.5.8.1-2v8l8XjvcW5E2rmy0u7N7  clock-0.8-KQdRNfSnPL2Kq3p84TuxcV  colour-2.3.5-y0xjV3ONUd40VuBtReEvC  comonad-5.0.6-DtTLnoNTwecG0OK94QRjJz  connection-0.3.1-5gZ0JcBDqj51jmt8qxCeld  contravariant-1.5.2-4tubmgOpLIj5IwIaRQgygE  cookie-0.4.5-FViOMgoPVhL3PprTfOcJF2  cryptonite-0.25-LmADbLCBFPrHiPTfu99v8w  data-binary-ieee754-0.4.4-Jh3qq4jPu7AAxCF7JMXnJo  data-default-0.7.1.1-COovZVyOTYqEavTGLlfqy8  (+122 more)
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/Unique-0.4.7.6-5agCY3H0Epd2eLkt4Eh0Bs/Data/List/: Unique.hi  UniqueStrict.hi  UniqueUnsorted.hi
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/servant-options-0.1.0.0-IS5RaXCDPU21iESMvGkLGF/Network/Wai/Middleware/Servant/: Options.hi
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/server-0.1.0.0-BKF2RNL8jGV3ir85CyF8cO/: Controller.hi  Entity.hi  Query.hi
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/server-0.1.0.0-BXb93lA8dnX9nt10x8YmVX/: Controller.hi  Entity.hi  Query.hi
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/yaml-config-0.4.0-3ED0Ji4qAdyLCYZrX7VOlZ/Data/Yaml/: Config.hi
server/.stack-work/install/99a5c7ce/lib/x86_64-windows-ghc-8.6.5/yaml-config-0.4.0-3ED0Ji4qAdyLCYZrX7VOlZ/Data/Yaml/Config/: Internal.hi
server/.stack-work/install/99a5c7ce/pkgdb/: Unique-0.4.7.6-5agCY3H0Epd2eLkt4Eh0Bs.conf  package.cache  servant-options-0.1.0.0-IS5RaXCDPU21iESMvGkLGF.conf  server-0.1.0.0-BKF2RNL8jGV3ir85CyF8cO.conf  yaml-config-0.4.0-3ED0Ji4qAdyLCYZrX7VOlZ.conf
server/app/: Main.hs
server/src/: App.hs  Controller.hs  Cook.hs  Db.hs  Entity.hs  Hoge.hs  Lib.hs  Query.hs
server/src/Ch10/: Builder.hs  JSON.hs  Parsing.hs  Text.hs
server/src/Ch11/: Entities.hs  Gender.hs  Queries.hs
server/src/DataStore/: Internal.hs
server/src/Sandbox/: Hasbolt.hs
server/test/: Tasty.hs
