name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Controller
                     , Query
                     , Entity
  build-depends:       base >= 4.7 && < 5
                      -- servant
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     -- Ch10
                     , text
                     , conduit
                     , conduit-extra
                     , attoparsec
                     , unordered-containers
                     -- Ch11
                     , persistent
                     , persistent-template
                     , monad-logger
                     , esqueleto
                     -- https://qiita.com/jabaraster/items/e8ebbe6d25b535947aba
                     , transformers
                     , resourcet
                     , persistent-postgresql
                     -- 
                     , time
                     , double-conversion
                     , extra
                     , text-format
                     , Unique
                     -- CORS
                     , servant-options
                     , wai-cors
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
